# LookingForPate

./: .gitignore  README.md  pyproject.toml
Looking_For_pate/: pyproject.toml  tasks.py
Looking_For_pate/documentation/: arkkitehtuuri.md  changelog.md  installation  instructions  working_hours.txt
Looking_For_pate/src/: GameLoop.py  Room.py  room.py  run.py
Looking_For_pate/src/entities/: Room.py
Looking_For_pate/src/sprites/: Laudna.py  Pate.py  cookies.py  door.py  laudna.py  pate.py  wall.py
Looking_For_pate/src/tests/: test_Laudna.py  test_Pate.py  test_door.py  test_wall.py  tests_Laudna.py  tests_Pate.py
documentation/: defining_requirements.mb  working_hours.txt
laskarit/: gitlog.txt
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
