[tool.poetry]
name = "lookingforpateproject"
version = "0.1.0"
description = "Laudna is looking for her pet familiar Pate"
authors = ["StarlineOutwood"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
invoke = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
